// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon.js should have correct size style on size prop and match snapshot 1`] = `
<i class="icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="20px" width="20px" role="img" aria-hidden="true" style="font-size: 20px; height: 20px; width: 20px;">
    <g fill="currentColor">
      <path d="M18 12a6 6 0 11-12 0 6 6 0 0112 0z"></path>
    </g>
  </svg></i>
`;

exports[`Icon.js should not set size style on base prop false and match snapshot 1`] = `
<i class="icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24" role="img" aria-hidden="true">
    <g fill="currentColor">
      <path d="M18 12a6 6 0 11-12 0 6 6 0 0112 0z"></path>
    </g>
  </svg></i>
`;

exports[`Icon.js should render "button" tag on attrs.onClick exists and match snapshot 1`] = `
<button class="icon icon--link" role="button" aria-hidden="false"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24px" width="24px" role="img" aria-hidden="true" style="font-size: 24px; height: 24px; width: 24px;">
    <g fill="currentColor">
      <path d="M18 12a6 6 0 11-12 0 6 6 0 0112 0z"></path>
    </g>
  </svg></button>
`;

exports[`Icon.js should render component and match snapshot 1`] = `
<i class="icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24px" width="24px" role="img" aria-hidden="true" style="font-size: 24px; height: 24px; width: 24px;">
    <g fill="currentColor">
      <path d="M18 12a6 6 0 11-12 0 6 6 0 0112 0z"></path>
    </g>
  </svg></i>
`;

exports[`Icon.js should render specified tag when using tag prop and match snapshot 1`] = `<span class="icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24px" width="24px" role="img" aria-hidden="true" style="font-size: 24px; height: 24px; width: 24px;"><g fill="currentColor"><path d="M18 12a6 6 0 11-12 0 6 6 0 0112 0z"></path></g></svg></span>`;

exports[`Icon.js should set size from helper prop and match snapshot 1`] = `
<i class="icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="18px" width="18px" role="img" aria-hidden="true" style="font-size: 18px; height: 18px; width: 18px;">
    <g fill="currentColor">
      <path d="M18 12a6 6 0 11-12 0 6 6 0 0112 0z"></path>
    </g>
  </svg></i>
`;

exports[`Icon.js should set size from helper prop and match snapshot 2`] = `
<i class="icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24px" width="24px" role="img" aria-hidden="true" style="font-size: 24px; height: 24px; width: 24px;">
    <g fill="currentColor">
      <path d="M18 12a6 6 0 11-12 0 6 6 0 0112 0z"></path>
    </g>
  </svg></i>
`;

exports[`Icon.js should set size from helper prop and match snapshot 3`] = `
<i class="icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="32px" width="32px" role="img" aria-hidden="true" style="font-size: 32px; height: 32px; width: 32px;">
    <g fill="currentColor">
      <path d="M18 12a6 6 0 11-12 0 6 6 0 0112 0z"></path>
    </g>
  </svg></i>
`;
